Carousel alignment fixed

--- a/src/components/WorkComponent/styles.scss
+++ b/src/components/WorkComponent/styles.scss
@@ -2,8 +2,9 @@
 
 .scrolls {
     width: 100%;
-    padding-bottom: 3rem;
     height: 450px;
+    display: flex;
+    align-items: center;
 
     .primary-container {
         overflow: hidden;
@@ -36,11 +37,12 @@
         min-width: 400px;
         word-break: break-all;
         animation: slide 20s linear infinite;
+        padding-top: 5rem;
+        height: 100%;
 
         .project-wrapper {
-            height: 100%;
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;
             flex-direction: column;
 
             &:hover {
